trackingservice/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackingservice-app
  namespace: apps
  labels:
    app: trackingservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trackingservice-app
  template:
    metadata:
      labels:
        app: trackingservice-app
    spec:
      containers:
      - name: trackingservice-app-container
        image: egovio/trackingservice:latest
        ports:
        - containerPort: 8080
