trackingservice/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trackingservice-app-service
  namespace: apps
  labels:
    app: trackingservice-app
spec:
  selector:
    app: trackingservice-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
